NP-46967-brage-merging-handle-multiple-duplicates, found logical error